@@ -305,7 +305,33 @@ module Nokogiri
           builder.to_xml.gsub(/\n/, ''))
       end
 
-    private
+      def test_builder_can_inherit_parent_namespace
+        builder = Nokogiri::XML::Builder.new
+        builder.products {
+          builder.parent.default_namespace = "foo"
+          builder.product {
+            builder.parent.default_namespace = nil
+          }
+        }
+        doc = builder.doc
+        ['product', 'products'].each do |n|
+          assert_equal doc.at_xpath("//*[local-name() = '#{n}']").namespace.href, 'foo'
+        end
+      end
+
+      def test_builder_can_handle_namespace_override
+        builder = Nokogiri::XML::Builder.new
+        builder.products('xmlns:foo' => 'bar') {
+          builder.product('xmlns:foo' => 'baz')
+        }
+
+        doc = builder.doc
+        assert_equal doc.at_xpath("//*[local-name() = 'product']").namespaces['xmlns:foo'], 'baz'
+        assert_equal doc.at_xpath("//*[local-name() = 'products']").namespaces['xmlns:foo'], 'bar'
+        assert_nil doc.at_xpath("//*[local-name() = 'products']").namespace
+      end
+
+      private
 
       def namespaces_defined_on(node)
         Hash[*node.namespace_definitions.collect{|n| ["xmlns:" + n.prefix, n.href]}.flatten]
